<?xml version="1.0" encoding="utf-8"?><!--
    TapTimer - A Timer Widget App
    Copyright (C) 2016 Dilley, Christopher

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->
<resources>
    <string name="app_name">TapTimer</string>

    <string name="widget_configure">TapTimer</string>
    <string name="prefab_configure">Configure Properties</string>
    <string name="InfoActivity_Title">Info</string>
    <string name="SettingsActivity_Title">Settings</string>

    <string name="TimerWidget_Label">TapTimer</string>

    <string name="ConfigActivity_ActiveHeader">Active</string>
    <string name="ConfigActivity_PrefabHeader">Your presets</string>
    <string name="ConfigActivity_ButtonConfirm">Confirm</string>
    <string name="ConfigActivity_ButtonCancel">Cancel</string>
    <string name="ConfigActivity_AddWidget">Add Widget</string>

    <string name="ConfigToolbar_Support">Support</string>
    <string name="ConfigToolbar_Settings">Settings</string>
    <string name="ConfigToolbar_Info">Info</string>

    <string name="ConfigActivity_Dialog_Title">Set widget settings</string>
    <string name="ConfigActivity_Dialog_Confirm">Confirm</string>
    <string name="ConfigActivity_Dialog_Cancel">Cancel</string>

    <string name="InfoActivity_Header">Welcome to TapTimer</string>
    <string name="InfoActivity_Body1">Let\'s get started setting up your 1-tap alarms.\n\n

    The point of this app is to add widgets to your home screen that you can start and stop
        just by tapping on them.  This is great for tasks that you frequently have to set
        a timer for, such as laundry or a nap.</string>
    <string name="InfoActivity_Subheader1">The configuration screen</string>
    <string name="InfoActivity_Body2">
        To begin, we need to add an active widget to your home screen.  Click the Plus icon
        under the "Active" header and drag the widget where you want it to go.\n\n

        You may create preset timers to apply to the widgets by tapping the Plus icon under the
        "Your presets" header.  Give it a name, choose an icon, a background color, and a
        duration for the timer.  To apply a preset to an active timer, select a timer from
        the active timer list, then tap the preset you wish to apply.\n\n

        To modify the properties of an active timer or a preset, press and hold it until
        the edit window appears.\n\n

        To reset an active timer back to its full duration, double-tap it.
    </string>
    <string name="InfoActivity_Subheader2">Interacting with widgets</string>
    <string name="InfoActivity_Body3">
        Starting and stopping a timer is simple:  simply tap the widget once!\n\n

        If you wish to reset the timer, double-tap.\n\n

        To configure the widget, triple-tap.\n\n

        To resize, move, or delete, press and hold the widget.\n\n
    </string>
    <string name="InfoActivity_CloseButton">Close</string>



    <string name="TimerWidget_Config_NameLabel">Name:</string>
    <string name="TimerWidget_Config_IconLabel">Icon:</string>
    <string name="TimerWidget_Config_ColorLabel">Color:</string>
    <string name="TimerWidget_Config_DurationLabel">Duration:</string>

    <string name="ActiveItemConfig_ResetButtonText">Reset</string>

    <string name="PrefabConfig_DeleteButtonText">Delete</string>

    <string name="ColorPicker_Custom">\?</string>
    <string name="ColorPicker_Dialog_Title">Choose custom color</string>
    <string name="ColorPicker_Dialog_Confirm">Confirm</string>
    <string name="ColorPicker_Dialog_Cancel">Cancel</string>

    <string name="DurationSetter_HourLabel">H:</string>
    <string name="DurationSetter_MinuteLabel">M:</string>
    <string name="DurationSetter_SecondLabel">S:</string>

    <string name="AlarmNotification_Title">TapTimer Alarm</string>
    <string name="AlarmNotification_Message">Click to dismiss alarm.</string>
    <string name="AlarmNotification_Button">DISMISS</string>
    <string name="AlarmNotification_ChannelName">Alarm Notification</string>
    <string name="AlarmNotification_ChannelDescription">Notifications that appear when an
    alarm is ongoing.</string>

    <string name="Pref_Feedback">Send feedback</string>
    <string name="Pref_FeedbackSummary">Report technical issues or suggest new features</string>
    <string name="Pref_FeedbackChooser">Choose how to send</string>
    <string name="Pref_Ringtone">Set ringtone</string>
    <string name="Pref_RingtoneSummary">Choose the ringtone that will play for all alarms</string>
    <string name="Pref_DoubleTapWindow">Double tap window</string>
    <string name="Pref_DoubleTapWindowSummary">Adjusts the sensitivity of
        detecting double-taps.</string>
    <string name="Pref_AutoSave">Auto-save on close</string>
    <string name="Pref_AutoSaveSummary">Save changes to widgets and presets whenever the
    configuration screen is closed.  If disabled, only saves changes when tapping Confirm.</string>
    <string name="Pref_Notifications">Notifications</string>
    <string name="Pref_NotificationsSummary">Make sure notifications are enabled
        in your device settings if you want them to appear when the alarm goes off.</string>
    <string name="PrefCat_Functional">Functional</string>
    <string name="PrefCat_Nitpick">Unimportant</string>

    <string name="Toast_AlarmReset">Alarm reset.</string>

    <string name="Toast_NotReady">Feature is not yet ready, sorry :X</string>

</resources>
