<?xml version="1.0" encoding="utf-8"?>
<!--
    TapTimer - A Timer Widget App
    Copyright (C) 2016 Dilley, Christopher

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dialog_margin">
    
    <FrameLayout
        android:id="@+id/PrefabConfig_CustomPrefabArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/PrefabConfig_RowHeight"
        android:text="@string/PrefabConfig_DeleteButtonText"
        android:onClick="onDeleteClick"
        />
    

    <LinearLayout
        android:id="@+id/PrefabConfig_ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/PrefabConfig_RowHeight"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/PrefabConfig_CancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ConfigActivity_ButtonCancel"
            android:onClick="onCancelClick"
            />

        <Button
            android:id="@+id/PrefabConfig_ConfirmButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ConfigActivity_ButtonConfirm"
            android:onClick="onConfirmClick"
            />


    </LinearLayout>


</LinearLayout>