<?xml version="1.0" encoding="utf-8"?>
<!--
    TapTimer - A Timer Widget App
    Copyright (C) 2016 Dilley, Christopher

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->
<!--
    Used as the sub-view for displaying timer prefab configuration screens.
    -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/PrefabConfig_RowHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:text="@string/TimerWidget_Config_NameLabel"
            />
        <EditText
            android:id="@+id/PrefabTimer_Config_NameInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:inputType="textShortMessage"
            android:imeOptions="actionDone"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/PrefabConfig_RowHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:text="@string/TimerWidget_Config_IconLabel"
            />
        <com.sprelf.taptimer.Views.EmojiPickerView
            android:id="@+id/PrefabTimer_Config_IconInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/PrefabConfig_RowHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:text="@string/TimerWidget_Config_ColorLabel"
            />
        <com.sprelf.taptimer.Views.ColorSwitcherView
            android:id="@+id/PrefabTimer_Config_ColorInput"
            android:layout_width="0dp"
            android:layout_height="@dimen/PrefabConfig_ColorPickerHeight"
            android:layout_weight="1"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/PrefabConfig_RowHeight"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.4"
            android:gravity="center_vertical"
            android:text="@string/TimerWidget_Config_DurationLabel"
            />
        <com.sprelf.taptimer.Views.DurationSetterView
            android:id="@+id/PrefabTimer_Config_DurationInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>