<?xml version="1.0" encoding="utf-8"?><!--
    TapTimer - A Timer Widget App
    Copyright (C) 2016 Dilley, Christopher

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->
<!--
    Used as the base view for the ConfigActivity.
    -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tap_timer_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:textColor="@color/ThemeText"
    tools:context="com.sprelf.taptimer.Activities.ConfigActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/Config_Toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar"
        app:popupTheme="@style/ThemeOverlay.MaterialComponents.Dark" />


    <LinearLayout
        android:id="@+id/Config_Content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/Config_Toolbar"
        android:baselineAligned="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/ConfigActivity_ActiveColumnMargin"
            android:layout_weight="3"
            android:background="@drawable/background_activecolumn"
            android:orientation="vertical"
            android:padding="@dimen/ConfigActivity_ActiveColumnPadding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/ConfigActivity_ActiveColumnHeaderTopMargin"
                android:gravity="center_horizontal"
                android:text="@string/ConfigActivity_ActiveHeader"
                android:layout_marginBottom="5dp"
                android:textColor="@color/ThemeText"
                android:textSize="@dimen/ConfigActivity_ActiveColumnHeaderTextSize" />

            <ListView
                android:id="@+id/Config_ActiveList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:dividerHeight="0dp"
                android:divider="@color/transparent"
                android:choiceMode="singleChoice"/>

            <ImageView
                android:id="@+id/Config_AddWidget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/add_box_72_light"
                android:contentDescription="@string/ConfigActivity_AddWidget" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="7">

            <TextView
                android:id="@+id/Config_PrefabHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/ConfigActivity_PrefabListHeaderTopMargin"
                android:layout_marginBottom="@dimen/ConfigActivity_PrefabListHeaderBottomMargin"
                android:gravity="center_horizontal"
                android:text="@string/ConfigActivity_PrefabHeader"
                android:textColor="@color/ThemeText"
                android:textSize="@dimen/ConfigActivity_PrefabListHeaderTextSize" />

            <GridView
                android:id="@+id/Config_PrefabList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/Config_PrefabHeader"
                android:layout_margin="@dimen/ConfigActivity_PrefabListMargins"
                android:layout_above="@id/Config_ButtonBar"
                android:columnWidth="@dimen/ConfigActivity_PrefabListColumnWidth"
                android:gravity="center"
                android:horizontalSpacing="@dimen/ConfigActivity_PrefabListHorizSpacing"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:verticalSpacing="@dimen/ConfigActivity_PrefabListVertSpacing" />

            <LinearLayout
                android:id="@+id/Config_ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="horizontal"
                android:padding="5dp"
                >

                <Button
                    android:id="@+id/Config_CancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ConfigActivity_ButtonCancel"
                    android:layout_marginHorizontal="10dp"
                    android:padding="10dp"
                    android:textColor="@color/ThemeText"
                    android:backgroundTint="@color/ThemeSecondary"
                    android:onClick="onCancelClick"
                    />

                <Button
                    android:id="@+id/Config_ConfirmButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/ConfigActivity_ButtonConfirm"
                    android:layout_marginHorizontal="10dp"
                    android:padding="10dp"
                    android:textColor="@color/ThemeText"
                    android:onClick="onConfirmClick"
                    />


            </LinearLayout>


        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
