<?xml version="1.0" encoding="utf-8"?>
<!--
    TapTimer - A Timer Widget App
    Copyright (C) 2016 Dilley, Christopher

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
    -->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tap_timer_config"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sprelf.taptimer.Activities.ConfigActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="@dimen/ConfigActivity_ActiveColumnMargin"
        android:orientation="vertical"
        android:background="@drawable/background_activecolumn"
        android:padding="@dimen/ConfigActivity_ActiveColumnBorderThickness"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ConfigActivity_ActiveColumnHeaderTopMargin"
            android:gravity="center_horizontal"
            android:text="@string/ConfigActivity_ActiveHeader"
            android:textSize="@dimen/ConfigActivity_ActiveColumnHeaderTextSize"
            />

        <ListView
            android:id="@+id/Config_ActiveList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:choiceMode="singleChoice"
            android:background="@drawable/background_activeitemselect"
            android:listSelector="@drawable/background_selectedtimer"
            />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        >

        <LinearLayout
            android:id="@+id/Config_ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/Config_CancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ConfigActivity_ButtonCancel"
                android:onClick="onCancelClick"
                />

            <Button
                android:id="@+id/Config_ConfirmButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ConfigActivity_ButtonConfirm"
                android:onClick="onConfirmClick"
                />



        </LinearLayout>

        <GridView
            android:id="@+id/Config_PrefabList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/Config_ButtonBar"
            android:columnWidth="@dimen/ConfigActivity_PrefabListColumnWidth"
            android:numColumns="auto_fit"
            android:verticalSpacing="@dimen/ConfigActivity_PrefabListVertSpacing"
            android:horizontalSpacing="@dimen/ConfigActivity_PrefabListHorizSpacing"
            android:stretchMode="columnWidth"
            android:gravity="center"
            />



    </RelativeLayout>

</LinearLayout>
